--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h4>Hello+</h4>
-    <h2>shailesh</h2>
+    <h4>Name Shivam Garg</h4>
+    <h2>Address Muzaffarnagar</h2>
+    <p>Working as Traniee </p>
 </body>
 </html>
