--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h4>Name Shivam Garg</h4>
-    <h2>Address Muzaffarnagar</h2>
-    <p>Working as Traniee </p>
+    <h2>Name Shivam Garg</h2>
+    <h2>Email id: shivamgarg2232001@gmail.com</h2>
+    <h2>Company Name: Ingenuity Gamming
+    </h2>
+    <h2>Company Address :1St Floor, 14, Shaheed Captain Sameer Bhan Marg, F Block, Sector 8, Noida, Delhi 201301</h2>
 </body>
 </html>
