--- a/day4/page3.html
+++ b/day4/page3.html
@@ -10,7 +10,7 @@
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
 </head>
 <body>
-    <div class="ccc">
+    <div class="container">
     <div class="menu">
      
         <ul id="nav">
@@ -174,6 +174,7 @@
             <h2>Copyright @ 2020 All Right Reserved By Claw Global</h2>
         </div>
     </div>
-    </div>
+</div>
+    
 </body>
 </html>
