--- a/day7/page1.html
+++ b/day7/page1.html
@@ -17,7 +17,7 @@ while(true){
     
 }
 document.write("SUM: "+sum)
-document.body.style.color="white";
+document.body.style.color="White";
 document.body.style.fontSize="40px"
 document.body.style.fontFamily="Courier"
 document.body.style.margin = "300PX 0PX 0PX 500PX";
