--- a/day7/page3.html
+++ b/day7/page3.html
@@ -11,6 +11,7 @@
     document.body.style.backgroundColor="yellow"; 
     document.body.style.color="orange"; 
     document.body.style.fontSize="30px";
+    document.body.style.fontFamily="Cursive";
     document.body.style.margin="100px 0px 0px 500px";
     var info = {
         name: "Shivam Garg",
