--- a/day9/mainpage.html
+++ b/day9/mainpage.html
@@ -1,12 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <p><a href="">Assignment 1</a>  </p>
-</body>
+    <style>
+      * {
+        /* padding: 20px 20px 20px 20px; */
+        background-color: gray;
+        margin-top: 70px;
+        margin-left: 30px;
+        
+      }
+      h1 {
+        margin-top: 20px;
+        font-size: 20px;
+        color: aliceblue;
+        margin-left: 50px;
+        margin-right: 200px;
+        margin-top: 10px;
+        font-family: cursive;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>
+      1. Write a Program to return sum of all Arguments passed to a Function.<a
+        href="https://shivam-garg7.github.io/Ingenuity-Gaming/day9/page1.html"
+        >Program 1</a
+      >
+    </h1>
+    <h1>
+      2. Write a Program to return more than one value from a Function.<a
+        href="https://shivam-garg7.github.io/Ingenuity-Gaming/day9/page2.html"
+        >Program 2</a
+      >
+    </h1>
+    <h1>
+      3. Write a code to return entire function definition and display it.<a
+        href="https://shivam-garg7.github.io/Ingenuity-Gaming/day9/page3.html"
+        >Program 3</a
+      >
+    </h1>
+    <h1>
+      4. Write a JavaScript program to create a new string adding "New!" in
+      front of a given String.
+      <a href="https://shivam-garg7.github.io/Ingenuity-Gaming/day9/page4.html"
+        >Program 4</a
+      >
+    </h1>
+    <h1>
+      5. Write a JavaScript program to create a new string from a given string
+      taking first 3 characters and the last 3 characters of a string and add
+      them together.<a
+        href="https://shivam-garg7.github.io/Ingenuity-Gaming/day9/page5.html"
+        >Program 5</a
+      >
+    </h1>
+  </body>
 </html>
