--- a/day11/index.html
+++ b/day11/index.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- <audio  id="autoplay">
+      <source src="../image/goldn-116392.mp3" type="audio/mp3">
+    </audio> -->
     <div id="hh">
     <h1>WHAKE A MOLE</h1>
-    <img src="../image/mole.png" id="mole" />
+    <img src="../image/mole.png" id="mole"/>
     <img src="../image/dirt.svg" id="mud" />
     <button type="button" id="start" onclick="start()">START</button>
 
@@ -21,12 +24,12 @@
     <img src="../image/dirt.svg" id="dirt5" class="dirt" />
     <img src="../image/dirt.svg" id="dirt6" class="dirt" />
 
-    <img src="../image/mole.png" id="mole1" class="mole" onclick="count1()" />
-    <img src="../image/mole.png" id="mole2" class="mole" onclick="count1()"/>
-    <img src="../image/mole.png" id="mole3" class="mole" onclick="count1()"/>
-    <img src="../image/mole.png" id="mole4" class="mole" onclick="count1()"/>
-    <img src="../image/mole.png" id="mole5" class="mole" onclick="count1()"/>
-    <img src="../image/mole.png" id="mole6" class="mole" onclick="count1()"/>
+    <img src="../image/mole.png" id="mole1" class="mole" onmouseover="count1()" />
+    <img src="../image/mole.png" id="mole2" class="mole" onmouseover="count1()"/>
+    <img src="../image/mole.png" id="mole3" class="mole" onmouseover="count1()"/>
+    <img src="../image/mole.png" id="mole4" class="mole" onmouseover="count1()"/>
+    <img src="../image/mole.png" id="mole5" class="mole" onmouseover="count1()"/>
+    <img src="../image/mole.png" id="mole6" class="mole" onmouseover="count1()"/>
     <span class="points">YOUR POINT :-</span>
     <span id="currentPoint" class="points"></span>
     <script src="./script1.js"></script>
