--- a/day13/formpage.html
+++ b/day13/formpage.html
@@ -179,11 +179,11 @@
    
         // var url="http"
         setTimeout(() => {
-            var url="";
+            var url="https://shivam-garg7.github.io/Ingenuity-Gaming/day13/form.html";
         var windowSize='height=800,width=950';
       var newWindow= window.open(url,"about blank",windowSize);
       newWindow.moveTo(150,100);
-        }, 3000);
+        }, 5000);
        
 
        
