--- a/day13/mainpage.html
+++ b/day13/mainpage.html
@@ -40,8 +40,7 @@
     <h1>
         3. Show Notification when user not connected to Internet.<a
         href="https://shivam-garg7.github.io/Ingenuity-Gaming/day13/connection.html"
-        >Program 3</a
-      >
+        >Program 3</a>
     </h1>
   </body>
 </html>
