--- a/day12/page1.html
+++ b/day12/page1.html
@@ -21,6 +21,6 @@
     <div class="todo-container">
       <ul class="todo-list"></ul>
     </div>
-    <script src="script1.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
