--- a/day14/promise1.html
+++ b/day14/promise1.html
@@ -15,7 +15,7 @@
         body{
             background-image: url(../image/markus-winkler-i-NxU7b5oAM-unsplash.jpg);
             height: 100%;
-            /* background-position: center; */
+            background-position: center;
              background-repeat: no-repeat;
             background-size: cover;
         }
