--- a/day14/promise1.html
+++ b/day14/promise1.html
@@ -13,8 +13,9 @@
         
         }
         body{
+            width: fit-content;
             background-image: url(../image/markus-winkler-i-NxU7b5oAM-unsplash.jpg);
-            height: 100%;
+            height: 100vh;
             background-position: center;
              background-repeat: no-repeat;
             background-size: cover;
