--- a/day14/promise1.html
+++ b/day14/promise1.html
@@ -10,12 +10,15 @@
        *{padding: 0;
         margin: 0;
         box-sizing: border-box;
+        width: 100%;
+        height: 100%;
         
         }
         body{
-            width: fit-content;
+            
+            width: 100%;
             background-image: url(../image/markus-winkler-i-NxU7b5oAM-unsplash.jpg);
-            height: 100vh;
+            height: 100%;
             background-position: center;
              background-repeat: no-repeat;
             background-size: cover;
