--- a/day15/game1.html
+++ b/day15/game1.html
@@ -9,13 +9,18 @@
 </head>
 <body>
     <div id="container">
+        <img src="../image/vecteezyhalloween-festivity-back (2).jpg" alt="">
         <div id="btn1">
             <button id="btn" onclick="loading()" >Start</button>
         </div>
 
     </div>
-    <div id="loading">
-     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi voluptates cumque reiciendis? Fuga eos recusandae illo labore odit sunt modi fugiat sequi quo ex, obcaecati earum a ad numquam ratione.</p>
+    <div id="loading" >
+        <div id="content">
+            <p id="loadingtext" style="font-size: 100px;">loading</p>
+         </div>
+     <img src="../image/giphy.gif" alt="" width="1000px" height="500px">
+     
     </div>
 
         <script src="game1.js"></script>
