--- a/day15/game.html
+++ b/day15/game.html
@@ -8,23 +8,9 @@
     <title>Canvas</title>
   </head>
   <body>
-    <!-- <div id="gif">
-      <img src="../image/giphy.gif" alt=""> 
-    </div> -->
-    <div id="btn">
-      <button id="btn1" onclick="hand()">start</button>
-      <div id="gif"><img  src="../image/giphy.gif" alt=""></div>
-      
-      <!-- <audio controls  id="myaudio" hidden >
-        <source src="../image/goldn-116392.mp3" type="audio/mp3"/>
-       </audio> -->
-        <!-- <button id="btn1" onclick="hand()">start</button> -->
-    </div>
-    <div>
-    <h1 id="hh">Canvas Game</h1>
-    <canvas id="canvas" width="900" height="600"> </canvas>
+    <h1>Canvas Game</h1>
+    <canvas id="canvas" width="500" height="500"> </canvas>
     <img src="https://i.ibb.co/HHBFJdH/char.png" alt="" id="source" />
-</div>
     <script src="game.js"></script>
   </body>
 </html>
