--- a/day15/game1.html
+++ b/day15/game1.html
@@ -13,16 +13,19 @@
         <div id="btn1">
             <button id="btn" onclick="loading()" >Start</button>
         </div>
-
+        
     </div>
-    <div id="loading" >
+    <!-- <div id="loading" >
         <div id="content">
             <p id="loadingtext" style="font-size: 100px;">loading</p>
          </div>
      <img src="../image/giphy.gif" alt="" width="1000px" height="500px">
      
+    </div> -->
+    <div id="mainpage">
+        <h1>mainpage</h1>
     </div>
-
+   
         <script src="game1.js"></script>
 </body>
 </html>
