--- a/typescript_node/index.html
+++ b/typescript_node/index.html
@@ -26,14 +26,14 @@
   </head>
   <body>
     <h1>
-      1. Write a Program to return sum of all Arguments passed to a Function.<a
-        href="https://shivam-garg7.github.io/Ingenuity-Gaming/day9/page1.html"
+      1. Display Your Name in Browser using TypeScript Dynamically.<a
+        href="https://shivam-garg7.github.io/Ingenuity-Gaming/typescript_node/ass1.html"
         >Program 1</a
       >
     </h1>
     <h1>
-      2. Write a Program to return more than one value from a Function.<a
-        href="https://shivam-garg7.github.io/Ingenuity-Gaming/day9/page2.html"
+      2. Perform Cumulative Sum using rest Operator on passing variable length to a function.<a
+        href="https://shivam-garg7.github.io/Ingenuity-Gaming/typescript_node/ass2.html"
         >Program 2</a
       >
     </h1>
