--- a/typescript_node/index.html
+++ b/typescript_node/index.html
@@ -34,8 +34,7 @@
     <h1>
       2. Perform Cumulative Sum using rest Operator on passing variable length to a function.<a
         href="https://shivam-garg7.github.io/Ingenuity-Gaming/typescript_node/ass2.html"
-        >Program 2</a
-      >
+        >Program 2</a>
     </h1>
   </body>
 </html>
