--- a/day14/promise1.html
+++ b/day14/promise1.html
@@ -16,7 +16,7 @@
             
             background-image: url(../image/markus-winkler-i-NxU7b5oAM-unsplash.jpg);
         
-            background-position: center;
+            /* background-position: center; */
              background-repeat: no-repeat;
             background-size: cover;
         }
